[package]
name = "mcp2515-async"
description = "`#![no_std]` asynchronous library for interacting with MCP2515 CAN controller chips."
version = "0.1.1"
authors = ["David Cole <david.cole1340@gmail.com>", "Jacob Manning <jacobjm18@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jcmnn/mcp2515-async"
categories = ["no-std", "embedded"]
keywords = ["can", "mcp2515"]

[dependencies]
bitflags = "1.3.2"
embedded-hal = "0.2.7"
embedded-hal-async = "0.1.0-alpha.1"
modular-bitfield = "0.11.2"
nb = "1.0.0"
void = { version = "1.0.2", default-features = false }
